--- a/loginStyle.css
+++ b/loginStyle.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(to left, white, purple);
+    background: linear-gradient(to left, purple, blue);
     color:cyan;
 }
 
@@ -23,17 +23,4 @@ body {
     from { opacity: 1.0; }
     50% { opacity: 0.5; }
     to { opacity: 1.0; }
-}
-
-.button {
-    width: 150px;
-    height: 30px;
-    background-color: rgb(35, 202, 35);
-    border-radius: 12px;
-    border-color: rgb(80, 78, 78);
-}
-
-#data {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: floralwhite;
 }
