--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: floralwhite;
 }
+
+.lgbutton {
+    width: 200px;
+    height: 30px;
+    background-color: rgb(35, 202, 35);
+    border-radius: 12px;
+    border-color: rgb(80, 78, 78);
+}
